# gepref

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.cicd/: scripts.sh
.github/workflows/: cd.yml  ci.yml  cicd.yml
doc/source/: conf.py  gepref.rst  index.rst  installation.md  modules.rst  usage.md
src/gepref/: list.py  preprocessor.py  step.py
test/: test_list_preprocessor.py  test_list_steps.py
