[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gepref"
version = "0.1.2"
description = "GEneral PREprocessing Framework (gepref)"
authors = [{name="Juan Lara", email="julara@unal.edu.co"}]
requires-python = ">3.10"
dependencies = []

[project.optional-dependencies]
dev = [
	"jedi-language-server", "mypy", "pytest", "ruff", "flit",
	"sphinx", "sphinx-book-theme", "myst_parser"
]

[tool.setuptools.packages.find]
where = ["src/"]

[tool.setuptools.package-data]
pkgname = ["py.typed"]
